--- a/src/app/shared/components/dictionary-list/dictionary-list.scss
+++ b/src/app/shared/components/dictionary-list/dictionary-list.scss
@@ -1,7 +1,7 @@
 :host{
   padding: 20px;
   background-color: bisque;
-  max-width: 500px;
+  max-width: 700px;
   border-radius: 5px;
   border-width: 1px;
   display: flex;
@@ -9,7 +9,8 @@
 
   .word-row{
     display: block;
-    max-width: 200px;
+    max-width: 500px;
+    min-width: 200px;
     border-radius: 8px;
     background-color: tan;
     margin: 5px;
