--- a/src/app/landing/entry/entry.page.scss
+++ b/src/app/landing/entry/entry.page.scss
@@ -25,8 +25,9 @@
   .dictionary-container{
     display: flex;
 
-
     .legend {
+      padding: 10px;
+      background-color: cornflowerblue;
       font-size: 12px;
     }
   }
