--- a/src/app/shared/components/dictionary-list/dictionary-list.scss
+++ b/src/app/shared/components/dictionary-list/dictionary-list.scss
@@ -1,15 +1,22 @@
 :host{
   padding: 20px;
   background-color: bisque;
-  max-width: 700px;
+  max-width: 400px;
   border-radius: 5px;
   border-width: 1px;
   display: flex;
   flex-direction: column;
 
+  .values-container {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    align-items: center;
+  }
+
   .word-row{
     display: block;
-    max-width: 500px;
+    max-width: 300px;
     min-width: 200px;
     border-radius: 8px;
     background-color: tan;
