--- a/src/app/shared/components/dictionary-list/dictionary-list.scss
+++ b/src/app/shared/components/dictionary-list/dictionary-list.scss
@@ -1,11 +1,16 @@
 :host{
   padding: 20px;
   background-color: bisque;
-  max-width: 400px;
+  max-width: 600px;
   border-radius: 5px;
   border-width: 1px;
   display: flex;
   flex-direction: column;
+
+  .content-block {
+    display: flex;
+    align-items: flex-start;
+  }
 
   .values-container {
     display: flex;
@@ -17,9 +22,29 @@
   .word-row{
     display: block;
     max-width: 300px;
-    min-width: 200px;
+    min-width: 300px;
     border-radius: 8px;
     background-color: tan;
     margin: 5px;
+  }
+
+  .new-word-form {
+    background-color: violet;
+    margin: 5px;
+    max-width: 300px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .sort-row{
+    padding: 5px;
+
+    .sort-param {
+      box-shadow: 0 3px 3px rgba(0,0,0,0.5);
+      background-color: yellowgreen;
+      padding: 5px;
+      border-radius: 3px;
+      cursor: pointer;
+    }
   }
 }
