Implement dictionary loading and searching

--- a/src/app/shared/components/dictionary-list/dictionary-list.html
+++ b/src/app/shared/components/dictionary-list/dictionary-list.html
@@ -1,5 +1,14 @@
 <div class="content-block">
   <div>
+    <div class="search-row">
+      Search word
+      <div>
+          <input
+          type="text"
+          (input)="onSearch($event.target.value)"
+        />
+      </div>
+    </div>
     <div class="sort-row">
       Sort
       <span (click)="sortOrderChange()" class="sort-param">
@@ -44,36 +53,41 @@
     <div>
       Select page:
       <select (change)="onPageSelected($event.target.value)">
-        <option *ngFor="let page of this.pages" [value]="page">{{ page }}</option>
+        <option *ngFor="let page of pages" [value]="page">{{ page }}</option>
       </select>
     </div>
   </div>
-  <div class="new-word-form">
-    <div class="form-group">
-      <div for="tags">Word</div>
-      <input
-        type="text"
-        id="word"
-        (keyup)="onWordInputChange($event.target.value)"
-      />
-    </div>
-
-    <div class="form-group">
-      <div>Tags(Separate them by '|')</div>
-      <input
-        type="text"
-        id="tags"
-        (keyup)="onTagsInputChange($event.target.value)"
-      />
-      <div>
+  <div>
+    <div class="new-word-form">
+      <div class="form-group">
+        <div for="tags">Word</div>
         <input
-          type="checkbox"
-          (click)="onSetDefaultCheckboxInputChange($event.target.value)"
+          type="text"
+          id="word"
+          (keyup)="onWordInputChange($event.target.value)"
         />
-        Add default tags
       </div>
-    </div>
 
-    <button (click)="onAddNewWord()">Add new word</button>
+      <div class="form-group">
+        <div>Tags(Separate them by '|')</div>
+        <input
+          type="text"
+          id="tags"
+          (keyup)="onTagsInputChange($event.target.value)"
+        />
+        <div>
+          <input
+            type="checkbox"
+            (click)="onSetDefaultCheckboxInputChange($event.target.value)"
+          />
+          Add default tags
+        </div>
+      </div>
+
+      <button (click)="onAddNewWord()">Add new word</button>
+    </div>
+    <div>
+      <button (click)="onSaveDictionary()">Save dictionary</button>
+    </div>
   </div>
 </div>
