--- a/src/app/shared/components/dictionary-list/dictionary-list.scss
+++ b/src/app/shared/components/dictionary-list/dictionary-list.scss
@@ -12,6 +12,11 @@
     align-items: flex-start;
   }
 
+  .search-row {
+    padding: 5px;
+
+  }
+
   .values-container {
     display: flex;
     flex-wrap: wrap;
