--- a/src/app/shared/components/dictionary-list/dictionary-list.scss
+++ b/src/app/shared/components/dictionary-list/dictionary-list.scss
@@ -31,6 +31,10 @@
     border-radius: 8px;
     background-color: tan;
     margin: 5px;
+
+    &.canon-form {
+      background-color: peru;
+    }
   }
 
   .new-word-form {
