--- a/src/app/shared/components/tag/changeable-value.component.html
+++ b/src/app/shared/components/tag/changeable-value.component.html
@@ -16,6 +16,7 @@
   />
   <app-changeable-value-editor
     class="edit-panel"
+    *ngIf="changeable"
     [class.hidden]="!showContextMenu"
     (startEdit)="onStartEdit()"
     (save)="onSave()"
